Fixed file formating

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div id="center">
         <div id="content">
-          <video autoplay muted loop src="./video.mp4"></video>
+          <video autoplay muted loop src="./assets/video.mp4"></video>
           <div id="overlay">
             <div class="over1">
               <h1>
@@ -38,7 +38,7 @@
             </div>
             <div class="over2">
               <h2>Explore</h2>
-              <img src="./arrow-64.png" alt="" />
+              <img src="./assets/arrow-64.png" alt="" />
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
             
         </div>
         <div class="part-2">
-            <img src="./img2.avif" alt="">
+            <img src="./assets/img2.avif" alt="">
             <div class="box"><h5>Hannah Molte features in a fashion story by the lake for Vogue new
             shot</h5>
              <p>Such exposure to the fashion and beauty industries enabled her
@@ -170,7 +170,8 @@
         </div>
       </div>
       <div id="page-3">
-        
+
+
       </div>
     </div>
   </body>
