--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
           </div>
         </div>
       </div>
+      <footer>
+        <h1>premier model 2025</h1>
+        <h1>premier model 2025</h1>
+        <h1>premier model 2025</h1>
+        <h1>premier model 2025</h1>
+        <h1>premier model 2025</h1>
+      </footer>
+      <div class="blank">
+        
+      </div>
     </div>
   </body>
 </html>
